--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="PVB i-Store" />
+    <meta name="apple-mobile-web-app-title" content="PVB i-Store" />
+    <meta name="theme-color" content="#002e62" />
+    <meta name="msapplication-navbutton-color" content="#002e62" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="description" content="Web site created using create-react-app" />
     <meta
       name="description"
       content="Web site created using create-react-app"
