--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <title>React App</title>
+    <title>PVB i-Store</title>
 
     <!-- <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" defer></script>
     <script>
