--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,21 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script> -->
 
+    <script>
+      function googleTranslateElementInit(){
+        const config = {
+          pageLanguage: 'en',
+          includedLanguages: 'en,hi,zh-CN,ja,es,ko,fr,ar,tl',
+          layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+        };
 
+        const langOptionsID = 'google_translate_element';
+        
+        new google.translate.TranslateElement(config, langOptionsID);
+      }
+    </script>
+
+
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </body>
 </html>
